tests/fixtures/negative/style/MaxLineLength.kt
package style

fun example() {
    val name = "short line"
    println(name)
}
